[tool.poetry]
name = "trip-report-analysis"
version = "0.1.0"
description = ""
authors = ["Casey Johnson <caseyjohnsonwv@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.2"
praw = "^7.7.1"
ipykernel = "^6.29.5"
notebook = "^7.2.2"
openai = "^1.45.0"
python-dotenv = "^1.0.1"
seaborn = "^0.13.2"
scikit-learn = "^1.5.2"
imblearn = "^0.0"
xgboost = "^2.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
